Platform create API